# lbm-poiseuille

./: .gitignore  CMakeLists.txt  Doxyfile  codecov.yml  index.md  lbgrid.cc  lbgrid.h  main.cc
.circleci/: config.yml
include/: lbgrid.h
src/: lbgrid.cc  main.cc
tests/: lbgrid_test.cc  test_main.cc
